--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ select = "0.5.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+regex = "1.5"
+chrono = "0.4"
