--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0"
 regex = "1.5"
 chrono = "0.4"
 rusqlite = "0.27.0"
+scryfall = { version = "0.10.2", features = ["bulk_caching"] }
